# Impulse-7.1

./: .build.bat.swp  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-bak  ANSIEDIT.PAS  ASMSAUCE.PAS  BBS-INTEGRATION-SUMMARY.md  BETASITE.TXT  CHANGELOG.md  CI-CD-ANALYSIS-REPORT.md  CI-CD-SUMMARY.md  CLAUDE.local.md  CLAUDE.md  CMD.PAS  COMMON.PAS  COMMON1.PAS  CONF.PAS  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION-SUMMARY.md  DOCUMENTATION-VERIFICATION-REPORT.md  DOORS.PAS  Dockerfile  EXECOLD.PAS  FILE1.PAS  FILE10.PAS  FILE13.PAS  FILE2.PAS  FILE3.PAS  FILE5.PAS  FILE8.PAS  FILE9.PAS  GEMINI.md  IMP-MAIL.CFG  IMP.PAS  ISLD.PAS  LADLE.PAS  LICENSE-APACHE  LICENSE-MIT  LOGON2.PAS  (+45 more)
.github/: dependabot.yml
BP/: FILELIST.DOC  README
benches/: authentication.rs  files.rs  messaging.rs  stats.rs
crates/impulse-admin/: Cargo.toml
crates/impulse-admin/src/: access.rs  audit.rs  error.rs  lib.rs
crates/impulse-admin/src/files/: create.rs  edit.rs  mod.rs  security.rs
crates/impulse-admin/src/system/: broadcast.rs  kick.rs  mod.rs  sessions.rs
crates/impulse-admin/src/users/: edit.rs  history.rs  list.rs  mod.rs  remove.rs
crates/impulse-auth/: Cargo.toml
crates/impulse-auth/benches/: auth_benchmarks.rs
crates/impulse-auth/src/: lib.rs  lockout.rs  rate_limit.rs  validation.rs
crates/impulse-auth/src/flows/: login.rs  logout.rs  mod.rs  register.rs
crates/impulse-auth/tests/: integration_tests.rs
crates/impulse-cli/: Cargo.toml
crates/impulse-config/: Cargo.toml  README.md
crates/impulse-config/src/: error.rs  hooks.rs  lib.rs  loader.rs  reload.rs  validator.rs  watcher.rs
crates/impulse-config/tests/: integration_tests.rs
crates/impulse-door/: Cargo.toml
crates/impulse-door/src/: config.rs  error.rs  executor.rs  io.rs  lib.rs  manager.rs  session.rs
crates/impulse-door/src/dropfiles/: doorsys.rs  dorinfo.rs  generator.rs  mod.rs
crates/impulse-file/: Cargo.toml
crates/impulse-file/src/: diz.rs  error.rs  lib.rs  manager.rs  permissions.rs  search.rs  traits.rs  types.rs
crates/impulse-file/src/diz/: mod.rs  parser.rs  rar.rs  sevenz.rs  zip.rs
crates/impulse-file/src/scanning/: clamav.rs  mock.rs  mod.rs  notify.rs  quarantine.rs  traits.rs
crates/impulse-file/src/screens/: areas.rs  confirmation.rs  details.rs  list.rs  mod.rs  progress.rs  scanning.rs  search.rs  upload.rs
crates/impulse-file/src/transfer/: download.rs  mod.rs  stats.rs  upload.rs
crates/impulse-file/src/upload/: cleanup.rs  config.rs  metadata.rs  mod.rs  processor.rs  stats.rs  storage.rs
crates/impulse-file/src/validation/: duplicates.rs  extensions.rs  mod.rs  permissions.rs  quotas.rs  size.rs
crates/impulse-menu/: Cargo.toml
crates/impulse-menu/src/: commands.rs  error.rs  lib.rs  parser.rs  renderer.rs  router.rs  state.rs
crates/impulse-menu/tests/: integration_tests.rs
crates/impulse-message/: Cargo.toml
crates/impulse-message/src/: atomic.rs  error.rs  export.rs  import.rs  lib.rs  quote.rs  reply.rs  sanitize.rs  traits.rs  types.rs  validation.rs
crates/impulse-message/src/addressing/: fidonet.rs  mod.rs
crates/impulse-message/src/formats/: mod.rs
crates/impulse-message/src/formats/hudson/: mod.rs
crates/impulse-message/src/formats/jam/: header.rs  kludge.rs  mod.rs  write.rs
crates/impulse-message/src/qwk/: compress.rs  error.rs  generate.rs  header.rs  mod.rs  parse.rs
crates/impulse-message/src/routing/: mod.rs  router.rs
crates/impulse-message/src/screens/: list.rs  mod.rs  read.rs
crates/impulse-message/tests/: hudson_format_tests.rs  jam_format_tests.rs  kludge_tests.rs  message_base_tests.rs  screen_tests.rs  threading_tests.rs
crates/impulse-protocol/: Cargo.toml
crates/impulse-protocol/src/: detection.rs  lib.rs  selection.rs
crates/impulse-protocol/src/xmodem/: block.rs  checksum.rs  crc.rs  error.rs  mod.rs  receive.rs  send.rs  variants.rs
crates/impulse-protocol/src/ymodem/: batch.rs  metadata.rs  mod.rs  streaming.rs
crates/impulse-protocol/src/zmodem/: crc16.rs  crc32.rs  error.rs  escape.rs  file.rs  frame.rs  init.rs  mod.rs  negotiate.rs  parser.rs  progress.rs  receive.rs  recovery.rs  send.rs  state.rs
crates/impulse-protocol/tests/: protocol_integration.rs
crates/impulse-server/: Cargo.toml
crates/impulse-server/src/: auth.rs  main.rs  state.rs
crates/impulse-server/src/menus/: main_menu.rs  mod.rs
crates/impulse-server/src/menus/handlers/: admin.rs  doors.rs  files.rs  messages.rs  mod.rs  stats.rs  theme.rs  user_profile.rs  whos_online.rs
crates/impulse-session/: Cargo.toml
crates/impulse-session/src/: config.rs  connection.rs  error.rs  lib.rs  manager.rs  session.rs  websocket.rs
crates/impulse-ssh/: Cargo.toml
crates/impulse-terminal/: Cargo.toml
crates/impulse-terminal/src/: ansi.rs  color.rs  error.rs  lib.rs  renderer.rs
crates/impulse-terminal/src/theme/: apply.rs  loader.rs  manager.rs  metadata.rs  mod.rs  preview.rs  selector.rs  types.rs
crates/impulse-types/: Cargo.toml
crates/impulse-types/src/: board_flags.rs  config.rs  error.rs  file.rs  lib.rs  menu_flags.rs  message.rs  message_enums.rs  pascal_aux.rs  pascal_config.rs  pascal_file.rs  pascal_message.rs  pascal_types.rs  pascal_user.rs  protocol_flags.rs  security.rs  session.rs  user.rs  user_flags.rs  user_prefs.rs  user_stats.rs
crates/impulse-types/tests/: serialization.rs
crates/impulse-user/: Cargo.toml
crates/impulse-user/src/: directory.rs  lib.rs  privacy.rs
crates/impulse-user/src/achievements/: checker.rs  mod.rs  notify.rs  types.rs
crates/impulse-user/src/profile/: display.rs  mod.rs  view.rs
crates/impulse-user/src/settings/: manager.rs  mod.rs  password.rs  protocol.rs  theme.rs
crates/impulse-user/src/stats/: display.rs  mod.rs  tracker.rs
crates/impulse-web/: Cargo.toml
crates/integration-tests/: Cargo.toml
docs/: 00-project-overview.md  03-technical-details.md  04-development-guide.md  06-deployment-guide.md  07-migration-guide.md  08-security-architecture.md  09-conversion-strategy-plan.md  DOCUMENTATION-ANALYSIS.md  EDITION2024-MIGRATION-ANALYSIS.md  INDEX.md  (+4 more)
(+515 files in other folders)
