[workspace]
resolver = "2"
members = [
    "crates/impulse-core",
    "crates/impulse-types",
    "crates/impulse-config",
    "crates/impulse-protocol",
    "crates/impulse-telnet",
    "crates/impulse-ssh",
    "crates/impulse-session",
    "crates/impulse-terminal",
    "crates/impulse-auth",
    "crates/impulse-message",
    "crates/impulse-file",
    "crates/impulse-user",
    "crates/impulse-door",
    "crates/impulse-web",
    "crates/impulse-cli",
    "crates/impulse-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["DoubleGate <parobek@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/Impulse-7.1"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Terminal I/O
crossterm = "0.28"

# Networking
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Binary parsing
binrw = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
argon2 = "0.5"
sha2 = "0.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Testing
proptest = "1.5"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
