[package]
name = "impulse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-core = { path = "../impulse-core" }
impulse-types = { path = "../impulse-types" }
impulse-config = { path = "../impulse-config" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
