[package]
name = "impulse-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
