[package]
name = "impulse-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
