[package]
name = "impulse-door"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
