[package]
name = "impulse-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

# File handling
zip = "2.2"
wildmatch = "2.3"

# Data structures
indexmap = "2.8"
