[package]
name = "impulse-message"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait = { workspace = true }
binrw = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.8"
