[package]
name = "impulse-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-core = { path = "../impulse-core" }
impulse-types = { path = "../impulse-types" }
impulse-protocol = { path = "../impulse-protocol" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
