[package]
name = "impulse-ssh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-protocol = { path = "../impulse-protocol" }
impulse-types = { path = "../impulse-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
