[package]
name = "impulse-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
binrw = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
serde-big-array = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
bincode = { version = "2.0", features = ["serde"] }
proptest = { workspace = true }
