[package]
name = "impulse-user"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
impulse-auth = { path = "../impulse-auth" }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
binrw = { workspace = true }
