[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Core dependencies
impulse-types = { path = "../impulse-types" }
impulse-auth = { path = "../impulse-auth" }
impulse-message = { path = "../impulse-message" }
impulse-file = { path = "../impulse-file" }
impulse-user = { path = "../impulse-user" }
impulse-config = { path = "../impulse-config" }

# External dependencies
tokio = { workspace = true }
tempfile = "3.14"
anyhow = { workspace = true }
